Added login otp and some fix
